[project]
name = "prs"
version = "2.6.6"
description = "Planning Referral System corporate application"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django==5.2.8",
  "psycopg[binary,pool]==3.3.2",
  "dbca-utils==2.1.5",
  "python-dotenv==1.2.1",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "django-extensions==4.1",
  "django-crispy-forms==2.5",
  "crispy-bootstrap5==2025.6",
  "django-reversion==6.1.0",
  "django-taggit==6.1.0",
  "unidecode==1.4.0",
  "pillow==12.0.0",
  "python-magic==0.4.27",
  "lxml[html-clean]==6.0.2",
  "xmltodict==1.0.2",
  "extract-msg==0.55.0",
  "webtemplate-dbca==1.8.3",
  "geojson==3.2.0",
  "typesense==1.3.0",
  "pdfminer-six==20251107",
  "docx2txt==0.9",
  "celery==5.6.0",
  "django-celery-results==2.6.0",
  "whitenoise[brotli]==6.11.0",
  "django-crum==0.7.9",
  "sentry-sdk[django]==2.47.0",
  "redis==7.1.0",
  "xlsxwriter==3.2.9",
  "django-storages[azure]==1.14.6",
  "shapely==2.1.2",
  "fiona==1.10.1",
  "pyproj==3.7.2",
  "fudgeo==1.3.1",
  "django-valkey[libvalkey]==0.4.0",
]

[dependency-groups]
dev = [
  "ipython>=9.8.0",
  "ipdb>=0.13.13",
  "mixer>=7.2.2",
  "pre-commit>=4.5.0",
  "coverage>=7.13.0",
]

[tool.ruff]
line-length = 140
indent-width = 4
extend-exclude = ["migrations"]

[tool.ruff.lint]
ignore = ["E265", "E501", "E722"]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
