[project]
name = "prs"
version = "2.6.7"
description = "Planning Referral System corporate application"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
  "django==5.2.13",
  "psycopg[binary,pool]==3.3.3",
  "dbca-utils==2.1.5",
  "python-dotenv==1.2.2",
  "dj-database-url==3.1.2",
  "gunicorn[fast]==25.3.0",
  "django-extensions==4.1",
  "django-crispy-forms==2.6",
  "crispy-bootstrap5==2026.3",
  "django-reversion==6.1.0",
  "django-taggit==6.1.0",
  "unidecode==1.4.0",
  "pillow==12.2.0",
  "python-magic==0.4.27",
  "lxml[html-clean]==6.0.2",
  "xmltodict==1.0.4",
  "extract-msg==0.55.0",
  "webtemplate-dbca==1.8.3",
  "geojson==3.2.0",
  "typesense==2.0.0",
  "pdfminer-six==20260107",
  "docx2txt==0.9",
  "celery==5.6.3",
  "django-celery-results==2.6.0",
  "whitenoise[brotli]==6.12.0",
  "django-crum==0.7.9",
  "sentry-sdk[django]==2.57.0",
  "redis==7.4.0",
  "xlsxwriter==3.2.9",
  "django-storages[azure]==1.14.6",
  "shapely==2.1.2",
  "fiona==1.10.1",
  "pyproj==3.7.2",
  "fudgeo==1.5.7",
  "django-valkey[libvalkey]==0.4.0",
]

[dependency-groups]
dev = [
  "ipython>=9.12.0",
  "ipdb>=0.13.13",
  "mixer>=7.2.2",
  "pre-commit>=4.5.1",
  "coverage>=7.13.5",
]

[tool.ruff]
line-length = 140
indent-width = 4
extend-exclude = ["migrations"]

[tool.ruff.lint]
ignore = [
  "E265", # Block comment should start with #
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
